# duckstation

./: CMakeLists.txt  README.md  duckstation.sln
src/: CMakeLists.txt
src/common/: CMakeLists.txt  audio_stream.h  cd_image.cpp  cd_image.h  cd_image_ppf.cpp  common.vcxproj  common.vcxproj.filters  drm_display.cpp  drm_display.h  file_system.cpp  file_system.h  jit_code_buffer.cpp  jit_code_buffer.h  page_fault_handler.cpp  rectangle.h  string.cpp  string.h  window_info.h
src/core/: CMakeLists.txt  bus.cpp  bus.h  cheats.cpp  cheats.h  core.vcxproj  core.vcxproj.filters  cpu_code_cache.cpp  cpu_code_cache.h  cpu_core.cpp  cpu_core.h  cpu_recompiler_code_generator.cpp  cpu_recompiler_code_generator.h  cpu_recompiler_code_generator_aarch32.cpp  cpu_recompiler_code_generator_aarch64.cpp  cpu_recompiler_code_generator_generic.cpp  cpu_recompiler_code_generator_x64.cpp  gpu.cpp  gpu.h  gpu_backend.cpp  gpu_backend.h  gpu_commands.cpp  gpu_hw.cpp  gpu_hw.h  gpu_hw_d3d11.cpp  gpu_hw_d3d11.h  gpu_hw_d3d12.cpp  gpu_hw_d3d12.h  gpu_hw_opengl.cpp  gpu_hw_opengl.h  gpu_hw_shadergen.cpp  gpu_hw_shadergen.h  gpu_hw_vulkan.cpp  gpu_hw_vulkan.h  gpu_sw.cpp  gpu_sw.h  gpu_types.h  gte.cpp  host_display.cpp  host_display.h  (+13 more)
src/duckstation-libretro/: libretro_host_display.cpp  libretro_host_display.h  libretro_host_interface.cpp
src/duckstation-nogui/: CMakeLists.txt  drm_host_interface.cpp  drm_host_interface.h  duckstation-nogui.aps  duckstation-nogui.vcxproj  duckstation-nogui.vcxproj.filters  main.cpp  nogui_host_interface.cpp  nogui_host_interface.h  win32_host_interface.cpp
(+60 files in other folders)
